{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 351,
  "lineage": "c651cf7a-bc40-d7fc-6890-d209cd644a53",
  "resources": [
    {
      "module": "module.networking",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:subnet/subnet-0cdeee2d292b721c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 236,
            "cidr_block": "10.0.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdeee2d292b721c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203733861310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "CostCenter": "CAPSA-Security",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "capsa-security-private-subnet-1",
              "Owner": "SecurityTeam",
              "Project": "CAPSA-DevSecOps",
              "Tier": "private"
            },
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:subnet/subnet-0bc5e6308b3c73cb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 235,
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc5e6308b3c73cb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203733861310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "CostCenter": "CAPSA-Security",
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "capsa-security-private-subnet-2",
              "Owner": "SecurityTeam",
              "Project": "CAPSA-DevSecOps",
              "Tier": "private"
            },
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clamav_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:security-group/sg-010251269df2019a7",
            "description": "Security group for ClamAV ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010251269df2019a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ClamAV port from ECS worker SG",
                "from_port": 3310,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3310
              },
              {
                "cidr_blocks": [],
                "description": "ClamAV port from Lambda SG",
                "from_port": 3310,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe5fc7b1d898cdc5"
                ],
                "self": false,
                "to_port": 3310
              }
            ],
            "name": "capsa-clamav-sg-20260626115202616200000001",
            "name_prefix": "capsa-clamav-sg-",
            "owner_id": "203733861310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "capsa-clamav-service-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-clamav-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_to_clamav",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:security-group/sg-0fe5fc7b1d898cdc5",
            "description": "Security group for Lambda-to-ClamAV traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Outbound HTTPS from Lambda functions to AWS PrivateLink endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a628c0c84bd98df"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Outbound HTTPS from Lambda functions to S3 Gateway endpoint prefix list",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-7ba54012"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Outbound to ClamAV service",
                "from_port": 3310,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010251269df2019a7"
                ],
                "self": false,
                "to_port": 3310
              },
              {
                "cidr_blocks": [],
                "description": "Outbound to Redis service",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074a03654e2878a5e"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0fe5fc7b1d898cdc5",
            "ingress": [],
            "name": "capsa-lambda-clamav-sg-20260626115202659600000002",
            "name_prefix": "capsa-lambda-clamav-sg-",
            "owner_id": "203733861310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "capsa-lambda-clamav-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-lambda-clamav-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:security-group/sg-074a03654e2878a5e",
            "description": "Security group for Redis in ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074a03654e2878a5e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from Lambda and ECS worker SGs",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010251269df2019a7",
                  "sg-0fe5fc7b1d898cdc5"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "capsa-redis-sg-20260626115213124000000005",
            "name_prefix": "capsa-redis-sg-",
            "owner_id": "203733861310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "capsa-redis-service-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-redis-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.aws_security_group.lambda_to_clamav",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:security-group/sg-02a628c0c84bd98df",
            "description": "Security group for CAPSA AWS interface VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Endpoint ENI response traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a628c0c84bd98df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from ECS tasks to AWS PrivateLink endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010251269df2019a7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from Lambda functions to AWS PrivateLink endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe5fc7b1d898cdc5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "capsa-vpc-endpoints-sg-20260629092259394400000001",
            "name_prefix": "capsa-vpc-endpoints-sg-",
            "owner_id": "203733861310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "capsa-vpc-endpoints-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "clamav_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "ClamAV port from Lambda SG",
            "from_port": 3310,
            "id": "sgrule-3690770378",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010251269df2019a7",
            "security_group_rule_id": "sgr-0c1a9f8166015a1d0",
            "self": false,
            "source_security_group_id": "sg-0fe5fc7b1d898cdc5",
            "timeouts": null,
            "to_port": 3310,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.aws_security_group.lambda_to_clamav",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "clamav_ingress_from_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "ClamAV port from ECS worker SG",
            "from_port": 3310,
            "id": "sgrule-3505497422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010251269df2019a7",
            "security_group_rule_id": "sgr-0a5da79ccaeb7104a",
            "self": false,
            "source_security_group_id": "sg-010251269df2019a7",
            "timeouts": null,
            "to_port": 3310,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_endpoint_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Outbound HTTPS from ECS tasks to AWS PrivateLink endpoints",
            "from_port": 443,
            "id": "sgrule-964197819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010251269df2019a7",
            "security_group_rule_id": "sgr-0ee058071e799c6ee",
            "self": false,
            "source_security_group_id": "sg-02a628c0c84bd98df",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_s3_gateway_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Outbound HTTPS from ECS tasks to S3 Gateway endpoint prefix list",
            "from_port": 443,
            "id": "sgrule-1816205824",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-7ba54012"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-010251269df2019a7",
            "security_group_rule_id": "sgr-07ecc7e4f32045b3f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.data.aws_prefix_list.s3",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Outbound to ClamAV service",
            "from_port": 3310,
            "id": "sgrule-4117863164",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe5fc7b1d898cdc5",
            "security_group_rule_id": "sgr-0059a706c2b6bd6a1",
            "self": false,
            "source_security_group_id": "sg-010251269df2019a7",
            "timeouts": null,
            "to_port": 3310,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.aws_security_group.lambda_to_clamav",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_endpoint_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Outbound HTTPS from Lambda functions to AWS PrivateLink endpoints",
            "from_port": 443,
            "id": "sgrule-1079119976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe5fc7b1d898cdc5",
            "security_group_rule_id": "sgr-0730db89b740999d1",
            "self": false,
            "source_security_group_id": "sg-02a628c0c84bd98df",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.lambda_to_clamav",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_redis_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Outbound to Redis service",
            "from_port": 6379,
            "id": "sgrule-87362815",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe5fc7b1d898cdc5",
            "security_group_rule_id": "sgr-0f04ea9ccda5ebe7c",
            "self": false,
            "source_security_group_id": "sg-074a03654e2878a5e",
            "timeouts": null,
            "to_port": 6379,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.aws_security_group.lambda_to_clamav",
            "module.networking.aws_security_group.redis_service",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_s3_gateway_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Outbound HTTPS from Lambda functions to S3 Gateway endpoint prefix list",
            "from_port": 443,
            "id": "sgrule-3209238416",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-7ba54012"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0fe5fc7b1d898cdc5",
            "security_group_rule_id": "sgr-0b5cbdcb3ef833dbf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.lambda_to_clamav",
            "module.networking.data.aws_prefix_list.s3",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoints_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Endpoint ENI response traffic",
            "from_port": 0,
            "id": "sgrule-378567514",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02a628c0c84bd98df",
            "security_group_rule_id": "sgr-0e9470440208ca8f7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoints_ingress_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTPS from ECS tasks to AWS PrivateLink endpoints",
            "from_port": 443,
            "id": "sgrule-2424009596",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a628c0c84bd98df",
            "security_group_rule_id": "sgr-0b5fb5c02c36fc486",
            "self": false,
            "source_security_group_id": "sg-010251269df2019a7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.clamav_service",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoints_ingress_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTPS from Lambda functions to AWS PrivateLink endpoints",
            "from_port": 443,
            "id": "sgrule-2608232952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a628c0c84bd98df",
            "security_group_rule_id": "sgr-04360d4fe73c5eaf4",
            "self": false,
            "source_security_group_id": "sg-0fe5fc7b1d898cdc5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.lambda_to_clamav",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-0922eacb731f87388",
            "dns_entry": [
              {
                "dns_name": "vpce-0922eacb731f87388-fgfcr2ew.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0922eacb731f87388-fgfcr2ew-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0922eacb731f87388-fgfcr2ew-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0876731M0QOQFPQZ9AP"
              },
              {
                "dns_name": "ecr.us-east-2.api.aws",
                "hosted_zone_id": "Z0537117V1FH994VB1FQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0922eacb731f87388",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-028b803b139aaee1d",
              "eni-0730fdc8c60cc7448"
            ],
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a628c0c84bd98df"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.44",
                "subnet_id": "subnet-0cdeee2d292b721c5"
              },
              {
                "ipv4": "10.0.11.23",
                "subnet_id": "subnet-0bc5e6308b3c73cb0"
              }
            ],
            "subnet_ids": [
              "subnet-0bc5e6308b3c73cb0",
              "subnet-0cdeee2d292b721c5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-ecr-api-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-02a4238f56e8d2658",
            "dns_entry": [
              {
                "dns_name": "vpce-02a4238f56e8d2658-1zefxh24.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-02a4238f56e8d2658-1zefxh24-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-02a4238f56e8d2658-1zefxh24-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z05394481ZZ21JFWBM6QL"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z05394481ZZ21JFWBM6QL"
              },
              {
                "dns_name": "dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z05394551AOYFUBNAFUDT"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z05394551AOYFUBNAFUDT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02a4238f56e8d2658",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04ef676cf11974030",
              "eni-0b7dfefa88677f11d"
            ],
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a628c0c84bd98df"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.12",
                "subnet_id": "subnet-0cdeee2d292b721c5"
              },
              {
                "ipv4": "10.0.11.29",
                "subnet_id": "subnet-0bc5e6308b3c73cb0"
              }
            ],
            "subnet_ids": [
              "subnet-0bc5e6308b3c73cb0",
              "subnet-0cdeee2d292b721c5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-0348f296182fa34f5",
            "dns_entry": [
              {
                "dns_name": "vpce-0348f296182fa34f5-ktfze75v.kms.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0348f296182fa34f5-ktfze75v-us-east-2b.kms.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0348f296182fa34f5-ktfze75v-us-east-2a.kms.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "kms.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z053890325BF4RUEJIE9W"
              },
              {
                "dns_name": "kms.us-east-2.api.aws",
                "hosted_zone_id": "Z00792042M2TA9E1QGMHF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0348f296182fa34f5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09a61a250bc0e1bd6",
              "eni-0de01eef4217600ee"
            ],
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a628c0c84bd98df"
            ],
            "service_name": "com.amazonaws.us-east-2.kms",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.105",
                "subnet_id": "subnet-0cdeee2d292b721c5"
              },
              {
                "ipv4": "10.0.11.191",
                "subnet_id": "subnet-0bc5e6308b3c73cb0"
              }
            ],
            "subnet_ids": [
              "subnet-0bc5e6308b3c73cb0",
              "subnet-0cdeee2d292b721c5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-kms-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-kms-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-02395bc66f1d38015",
            "dns_entry": [
              {
                "dns_name": "vpce-02395bc66f1d38015-zx605wrf.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-02395bc66f1d38015-zx605wrf-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-02395bc66f1d38015-zx605wrf-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z053850735HV5M0XCWI14"
              },
              {
                "dns_name": "logs.us-east-2.api.aws",
                "hosted_zone_id": "Z01446941NH9IJAV4DOS9"
              },
              {
                "dns_name": "streaming-logs.us-east-2.api.aws",
                "hosted_zone_id": "Z08843533TNMF3CV8KIFC"
              },
              {
                "dns_name": "streaming-logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0538973HCYM62IYURLV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02395bc66f1d38015",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-043d21f091690e00c",
              "eni-0c3ae7d7ade78fe03"
            ],
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a628c0c84bd98df"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.142",
                "subnet_id": "subnet-0cdeee2d292b721c5"
              },
              {
                "ipv4": "10.0.11.95",
                "subnet_id": "subnet-0bc5e6308b3c73cb0"
              }
            ],
            "subnet_ids": [
              "subnet-0bc5e6308b3c73cb0",
              "subnet-0cdeee2d292b721c5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-logs-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-logs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-0aba9bf4e4e63cfc8",
            "dns_entry": [
              {
                "dns_name": "vpce-0aba9bf4e4e63cfc8-nq6hogs6.monitoring.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0aba9bf4e4e63cfc8-nq6hogs6-us-east-2a.monitoring.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0aba9bf4e4e63cfc8-nq6hogs6-us-east-2b.monitoring.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "monitoring.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z01469971C2XWAPH2X95Y"
              },
              {
                "dns_name": "monitoring-fips.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0147000VIGKXE2D85K3"
              },
              {
                "dns_name": "monitoring-fips.us-east-2.api.aws",
                "hosted_zone_id": "Z05394537WIUZ8QA4OG4"
              },
              {
                "dns_name": "monitoring.us-east-2.api.aws",
                "hosted_zone_id": "Z01446992B2TO6CFOAD2R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aba9bf4e4e63cfc8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01ad7a484f4296380",
              "eni-0a6c7f345b5e2bfe8"
            ],
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a628c0c84bd98df"
            ],
            "service_name": "com.amazonaws.us-east-2.monitoring",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.79",
                "subnet_id": "subnet-0cdeee2d292b721c5"
              },
              {
                "ipv4": "10.0.11.51",
                "subnet_id": "subnet-0bc5e6308b3c73cb0"
              }
            ],
            "subnet_ids": [
              "subnet-0bc5e6308b3c73cb0",
              "subnet-0cdeee2d292b721c5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-monitoring-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-monitoring-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-0ac0e822ca06623c9",
            "dns_entry": [
              {
                "dns_name": "vpce-0ac0e822ca06623c9-tr8flrxn.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ac0e822ca06623c9-tr8flrxn-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ac0e822ca06623c9-tr8flrxn-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z088436536VNP54VX6V5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ac0e822ca06623c9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0213d1f201bb710d8",
              "eni-07818c3bc460d8669"
            ],
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a628c0c84bd98df"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.198",
                "subnet_id": "subnet-0cdeee2d292b721c5"
              },
              {
                "ipv4": "10.0.11.15",
                "subnet_id": "subnet-0bc5e6308b3c73cb0"
              }
            ],
            "subnet_ids": [
              "subnet-0bc5e6308b3c73cb0",
              "subnet-0cdeee2d292b721c5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-secretsmanager-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-secretsmanager-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        },
        {
          "index_key": "sns",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-08f1111472ace954c",
            "dns_entry": [
              {
                "dns_name": "vpce-08f1111472ace954c-nw4y4vdj.sns.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-08f1111472ace954c-nw4y4vdj-us-east-2b.sns.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-08f1111472ace954c-nw4y4vdj-us-east-2a.sns.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "sns.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z01470021AJRGQ657C6JY"
              },
              {
                "dns_name": "sns.us-east-2.api.aws",
                "hosted_zone_id": "Z01469561ZEL5QXR67J9I"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08f1111472ace954c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-077b1810e46b83a76",
              "eni-0a4c0f54aa792d53d"
            ],
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02a628c0c84bd98df"
            ],
            "service_name": "com.amazonaws.us-east-2.sns",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.14",
                "subnet_id": "subnet-0cdeee2d292b721c5"
              },
              {
                "ipv4": "10.0.11.61",
                "subnet_id": "subnet-0bc5e6308b3c73cb0"
              }
            ],
            "subnet_ids": [
              "subnet-0bc5e6308b3c73cb0",
              "subnet-0cdeee2d292b721c5"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-sns-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-sns-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_subnets.default",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203733861310:vpc-endpoint/vpce-0ea6cb78112ea688a",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "3.5.92.0/23",
              "3.5.88.0/22",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ea6cb78112ea688a",
            "ip_address_type": "ipv4",
            "owner_id": "203733861310",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0224cc2425a1ed005",
              "rtb-097779093cff3b9fd"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "capsa-prod-s3-endpoint"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "capsa-prod-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0fda7741240060f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.data.aws_region.current",
            "module.networking.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}